--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - "8006:8006"
     environment:
+      - DJANGO_DEBUG=False
+      - ALLOWED_HOSTS=192.168.15.215,localhost,127.0.0.1
       - MYSQL_DATABASE=alkosto_verify_db
       - MYSQL_USER=alkosto_user
       - MYSQL_PASSWORD=alkosto_password
