--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,14 @@ version: '3.8'
 services:
   web:
     build: .
-    command: gunicorn --bind 0.0.0.0:8000 alkosto_verify.wsgi:application
     volumes:
       - .:/app
     ports:
-      - "8006:8006"
+      - "8006:8000"  # Cambiado: 8006 (host) -> 8000 (container)
     environment:
       - DJANGO_DEBUG=False
       - ALLOWED_HOSTS=192.168.15.215,localhost,127.0.0.1
-      - MYSQL_DATABASE=alkosto_verify_db
+      - MYSQL_NAME=alkosto_verify_db
       - MYSQL_USER=alkosto_user
       - MYSQL_PASSWORD=alkosto_password
       - MYSQL_HOST=db
@@ -19,6 +18,7 @@ services:
       - DJANGO_SETTINGS_MODULE=alkosto_verify.settings
     depends_on:
       - db
+    restart: unless-stopped
 
   db:
     image: mysql:8.0
@@ -31,6 +31,8 @@ services:
       - MYSQL_PASSWORD=alkosto_password
     ports:
       - "3307:3306"
+    restart: unless-stopped
+    command: --default-authentication-plugin=mysql_native_password
 
 volumes:
   mysql_data:
