--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: '3.8'
 
 services:
   web:
-    build: .
-    command: gunicorn --bind 0.0.0.0:8006 alkosto_verify.wsgi:application
+    build: 
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
     ports:
       - "8006:8006"
     environment:
@@ -21,6 +23,11 @@ services:
     depends_on:
       - db
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8006/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   db:
     image: mysql:8.0
@@ -34,8 +41,19 @@ services:
       - MYSQL_ROOT_HOST=%
     ports:
       - "3307:3306"
-    command: --default-authentication-plugin=mysql_native_password
+    command: [
+      "--default-authentication-plugin=mysql_native_password",
+      "--character-set-server=utf8mb4",
+      "--collation-server=utf8mb4_unicode_ci",
+      "--innodb-buffer-pool-size=256M"
+    ]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "alkosto_user", "-palkosto_password"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   mysql_data:
+  static_volume:
