--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,58 +2,27 @@ version: '3.8'
 
 services:
   web:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    command: python manage.py runserver 0.0.0.0:8006
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
     ports:
       - "8006:8006"
-    environment:
-      - DJANGO_DEBUG=False
-      - ALLOWED_HOSTS=192.168.15.215,localhost,127.0.0.1,0.0.0.0
-      - MYSQL_DATABASE=alkosto_verify_db
-      - MYSQL_USER=alkosto_user
-      - MYSQL_PASSWORD=alkosto_password
-      - MYSQL_HOST=db
-      - MYSQL_PORT=3306
-      - DJANGO_SETTINGS_MODULE=alkosto_verify.settings
-      - DOCKER_CONTAINER=True
+    env_file: .env
     depends_on:
       - db
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8006/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   db:
-    image: mysql:5.7
+    image: mysql:8.0
+    environment:
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=root_password
-      - MYSQL_DATABASE=alkosto_verify_db
-      - MYSQL_USER=alkosto_user
-      - MYSQL_PASSWORD=alkosto_password
-      - MYSQL_ROOT_HOST=%
     ports:
       - "3307:3306"
-    command: [
-      "--default-authentication-plugin=mysql_native_password",
-      "--character-set-server=utf8mb4",
-      "--collation-server=utf8mb4_unicode_ci",
-      "--innodb-buffer-pool-size=256M"
-    ]
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "alkosto_user", "-palkosto_password"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
 volumes:
   mysql_data:
-  static_volume:
